# image-gif-dispose

./: .gitignore  Cargo.toml  README.md
examples/: explode.rs
src/: disposal.rs  lib.rs  screen.rs
